--- a/ev2gym/example_config_files/test.yaml
+++ b/ev2gym/example_config_files/test.yaml
@@ -1,4 +1,4 @@
-# This yml file is used to configure the evsim simulation
+# This yml file is used to configure the ev simulation
 
 ##############################################################################
 # Simulation Parameters
@@ -131,5 +131,5 @@ ev:
   min_time_of_stay: 60 # in minutes
   min_emergency_battery_capacity: 25 # in kWh
   desired_capacity: 1 # in (0-1) (0% - 100%)
-  #if trasition_soc is < 1, the curve of the line is affected by:
+  #if transition_soc is < 1, the curve of the line is affected by:
   transition_soc_multiplier: 5 # default 1 (the higher the number the shorter the effect of CCCV region)
