--- a/ev2gym/example_config_files/PublicPST.yaml
+++ b/ev2gym/example_config_files/PublicPST.yaml
@@ -1,4 +1,4 @@
-# This yml file is used to configure the evsim simulation
+# This yml file is used to configure the ev simulation
 
 ##############################################################################
 # Simulation Parameters
