--- a/ev2gym/example_config_files/simplePST.yaml
+++ b/ev2gym/example_config_files/simplePST.yaml
@@ -89,7 +89,7 @@ demand_response:
 ##############################################################################
 heterogeneous_ev_specs: True #if False, each EV has the same specifications
 # such as battery capacity, charging rate, etc.
-ev_specs_file: "/Users/xiongzheng/program/tutorial/EV2Gym/ev2gym/data/ev_specs_ev_plus_phev.json" # path to the file with the EV specifications
+ev_specs_file: ./ev2gym/data/ev_specs_ev_plus_phev.json # path to the file with the EV specifications
 
 ##############################################################################
 # Default Model values
