--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,11 @@ absl-py==2.1.0
 ale-py==0.10.1
 annotated-types==0.7.0
 anyio==4.7.0
-appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1733332318622/work
+# appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1733332318622/work
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
+# asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
 async-lru==2.0.4
 attrs==24.2.0
 babel==2.16.0
@@ -17,16 +17,16 @@ cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
 cloudpickle==3.1.0
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
+# comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
 contourpy==1.3.1
 cycler==0.12.1
-debugpy @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_563_nwtkoc/croot/debugpy_1690905063850/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1733236420667/work
+# debugpy @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_563_nwtkoc/croot/debugpy_1690905063850/work
+# decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1733236420667/work
 defusedxml==0.7.1
 docker-pycreds==0.4.0
 ev2gym==1.1.0
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1733208806608/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1725214404607/work
+# exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1733208806608/work
+# executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1725214404607/work
 Farama-Notifications==0.0.4
 fastjsonschema==2.21.1
 filelock==3.16.1
@@ -35,19 +35,19 @@ fqdn==1.5.1
 fsspec==2024.10.0
 gitdb==4.0.11
 GitPython==3.1.43
-grpcio==1.68.1
+grpcio==1.67.0
 gurobipy==12.0.0
 gymnasium==1.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1733223117029/work
-ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1719845458456/work
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1732896932739/work
+# importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1733223117029/work
+# ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1719845458456/work
+# ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1732896932739/work
 ipywidgets==8.1.5
 isoduration==20.11.0
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
+# jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
 Jinja2==3.1.4
 json5==0.10.0
 jsonpointer==3.0.0
@@ -57,8 +57,8 @@ jupyter==1.1.1
 jupyter-console==6.6.3
 jupyter-events==0.10.0
 jupyter-lsp==2.2.5
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1733440914442/work
-jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1727163409502/work
+# jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1733440914442/work
+# jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1727163409502/work
 jupyter_server==2.14.2
 jupyter_server_terminals==0.5.3
 jupyterlab==4.3.2
@@ -70,45 +70,45 @@ Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.9.3
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
+# matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
 mdurl==0.1.2
 mistune==3.0.2
 mpmath==1.3.0
 nbclient==0.10.1
 nbconvert==7.16.4
 nbformat==5.10.4
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
+# nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
 networkx==3.4.2
 notebook==7.3.1
 notebook_shim==0.2.4
 numpy==1.26.4
 opencv-python==4.10.0.84
 overrides==7.7.0
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1733203243479/work
+# packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1733203243479/work
 pandas==2.2.3
 pandocfilters==1.5.1
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1733271261340/work
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1733301927746/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1733327343728/work
+# parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1733271261340/work
+# pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1733301927746/work
+# pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1733327343728/work
 pillow==11.0.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1733232627818/work
+# platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1733232627818/work
 prometheus_client==0.21.1
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1733302527033/work
+# prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1733302527033/work
 protobuf==5.29.1
-psutil @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_1310b568-21f4-4cb0-b0e3-2f3d31e39728k9coaga5/croots/recipe/psutil_1656431280844/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1733302279685/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl#sha256=92c32ff62b5fd8cf325bec5ab90d7be3d2a8ca8c8a3813ff487a8d2002630d1f
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1721585709575/work
+# psutil @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_1310b568-21f4-4cb0-b0e3-2f3d31e39728k9coaga5/croots/recipe/psutil_1656431280844/work
+# ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1733302279685/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl#sha256=92c32ff62b5fd8cf325bec5ab90d7be3d2a8ca8c8a3813ff487a8d2002630d1f
+# pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1721585709575/work
 pycparser==2.22
 pydantic==2.10.3
 pydantic_core==2.27.1
 pygame==2.6.1
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1733221634316/work
+# Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1733221634316/work
 pyparsing==3.2.0
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1733215673016/work
+# python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1733215673016/work
 python-json-logger==2.0.7
 pytz==2024.2
 PyYAML==6.0.2
-pyzmq @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_43pxpbos3z/croot/pyzmq_1705605108344/work
+# pyzmq @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_43pxpbos3z/croot/pyzmq_1705605108344/work
 referencing==0.35.1
 requests==2.32.3
 rfc3339-validator==0.1.4
@@ -120,12 +120,12 @@ scipy==1.14.1
 Send2Trash==1.8.3
 sentry-sdk==2.19.1
 setproctitle==1.3.4
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
+# six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
 smmap==5.0.1
 sniffio==1.3.1
 soupsieve==2.6
 stable_baselines3==2.4.0
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
+# stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
 sympy==1.13.1
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
@@ -134,19 +134,19 @@ terminado==0.18.1
 tinycss2==1.4.0
 tomli==2.2.1
 torch==2.1.2
-tornado @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a4w03z48br/croot/tornado_1718740114858/work
+# tornado @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a4w03z48br/croot/tornado_1718740114858/work
 tqdm==4.67.1
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
+# traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
 types-python-dateutil==2.9.0.20241206
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1733188668063/work
+# typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1733188668063/work
 tzdata==2024.2
 uri-template==1.3.0
 urllib3==2.2.3
 wandb==0.19.0
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
+# wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.1.3
 widgetsnbextension==4.0.13
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1732827521216/work
+# zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1732827521216/work
